--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "@types/node": "^16.18.108",
     "@types/react": "^18.3.7",
     "@types/react-dom": "^18.3.0",
+    "@use-gesture/react": "^10.3.1",
+    "framer-motion": "^11.5.4",
     "react": "^18.3.1",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
